--- a/app/src/main/res/layout/activity_deposit.xml
+++ b/app/src/main/res/layout/activity_deposit.xml
@@ -4,14 +4,13 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.alumno.project07.Deposit"
-    android:id="@+id/">
+    tools:context="com.example.alumno.project07.Deposit">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Deposit"
+        android:text="DEPOSIT"
         android:id="@+id/textView"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
