--- a/app/src/main/res/layout/activity_transfer.xml
+++ b/app/src/main/res/layout/activity_transfer.xml
@@ -12,7 +12,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Transfers"
+            android:text="TRANSFERS"
             android:id="@+id/textView"
             android:layout_column="3"
             android:layout_gravity="center_horizontal"/>
