--- a/app/src/main/res/layout/activity_withdrawal.xml
+++ b/app/src/main/res/layout/activity_withdrawal.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Withdrawal"
+        android:text="WITHDRAWAL"
         android:id="@+id/textView"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
