--- a/app/src/main/res/layout/activity_transfer.xml
+++ b/app/src/main/res/layout/activity_transfer.xml
@@ -2,7 +2,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:stretchColumns="*"
+>
 
     <TableRow
         android:layout_width="fill_parent"
@@ -12,15 +14,28 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Transfers"
-            android:id="@+id/textView"
-            android:layout_column="3"
-            android:layout_gravity="center_horizontal"/>
+            android:text="Transfer"
+            android:id="@+id/textView4"
+            android:layout_column="0"
+            android:layout_span="2"
+            android:layout_gravity="center_vertical"
+            android:gravity="center" />
     </TableRow>
 
     <TableRow
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"></TableRow>
+        android:layout_height="fill_parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="From"
+            android:id="@+id/textView7"
+            android:layout_column="0"
+            android:layout_span="2" />
+
+    </TableRow>
 
     <TableRow
         android:layout_width="fill_parent"
@@ -31,12 +46,23 @@
             android:layout_height="wrap_content"
             android:id="@+id/spinner"
             android:layout_column="0"
-            android:layout_span="3"/>
+            android:layout_span="2" />
     </TableRow>
 
     <TableRow
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"></TableRow>
+        android:layout_height="fill_parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="To"
+            android:id="@+id/textView8"
+            android:layout_column="0"
+            android:layout_span="2" />
+
+    </TableRow>
 
     <TableRow
         android:layout_width="fill_parent"
@@ -52,10 +78,6 @@
 
     <TableRow
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"></TableRow>
-
-    <TableRow
-        android:layout_width="fill_parent"
         android:layout_height="fill_parent">
 
         <TextView
@@ -64,21 +86,23 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Amount:"
             android:id="@+id/textView2"
-            android:layout_column="0" />
+            android:layout_column="0"
+            android:layout_span="2" />
+
+    </TableRow>
+
+    <TableRow
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
 
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
             android:ems="10"
-            android:id="@+id/editText"
-            android:layout_column="3"
-            android:text="$"
-            android:autoText="false"
-            android:editable="false"
-            android:clickable="false"
-            android:elegantTextHeight="false"
-            android:textAlignment="textStart" />
+            android:id="@+id/editText3"
+            android:layout_span="2"
+            android:focusable="true" />
     </TableRow>
 
     <TableRow
@@ -88,21 +112,17 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Home"
+            android:text="Cancel"
             android:id="@+id/button2"
             android:onClick=""
             android:layout_column="0" />
-    </TableRow>
-
-    <TableRow
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Transfer"
             android:id="@+id/trans"
-            android:layout_column="0" />
+            android:layout_column="1" />
     </TableRow>
+
 </TableLayout>
