--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -135,7 +135,8 @@
             android:layout_column="0"
             android:layout_gravity="bottom"
             android:paddingTop="20dp"
-            android:gravity="center" />
+            android:gravity="center"
+            android:layout_span="0" />
     </TableRow>
 
 </TableLayout>
