--- a/app/src/main/res/layout/activity_deposit.xml
+++ b/app/src/main/res/layout/activity_deposit.xml
@@ -1,8 +1,7 @@
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.alumno.project07.Deposit"
-    android:id="@+id/">
+    tools:context="com.example.alumno.project07.Deposit">
 
     <TableRow
         android:layout_width="fill_parent"
@@ -113,7 +112,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Deposit"
-            android:id="@+id/homeButton"
+            android:id="@+id/Depositbttn"
             android:onClick=""
             android:layout_below="@+id/amount"
             android:layout_alignLeft="@+id/textView3"
