--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/imageView2"
             android:layout_column="0"
-            android:src="@drawable/bcp2"
+            android:src="@drawable/bcp"
             android:layout_span="3" />
 
     </TableRow>
