--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,8 +13,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/imageView"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:src="@drawable/bcp" />
+            android:layout_centerHorizontal="true" />
     </TableRow>
 
     <TableRow
@@ -25,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Username:"
+            android:text="Username"
             android:id="@+id/textView"
             android:layout_column="0" />
 
@@ -54,7 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Password:"
+            android:text="Password"
             android:id="@+id/textView2"
             android:layout_column="0" />
 
