--- a/app/src/main/res/layout/activity_deposit.xml
+++ b/app/src/main/res/layout/activity_deposit.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.alumno.project07.Deposit"
-    >
+    android:stretchColumns="*">
 
     <TableRow
         android:layout_width="fill_parent"
@@ -12,12 +12,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="DEPOSIT"
+            android:text="Deposit"
             android:id="@+id/textView"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal"
+            android:layout_span="2"
+            android:layout_column="0" />
     </TableRow>
 
     <TableRow
@@ -31,7 +33,9 @@
             android:id="@+id/textView14"
             android:layout_below="@+id/textView"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:layout_span="2"
+            android:layout_column="0" />
     </TableRow>
 
     <TableRow
@@ -41,12 +45,14 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="To :"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="To"
             android:id="@+id/textView2"
             android:layout_below="@+id/textView"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:layout_span="2"
+            android:layout_column="0" />
 
     </TableRow>
 
@@ -57,7 +63,9 @@
         <Spinner
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/spinner4" />
+            android:id="@+id/spinner4"
+            android:layout_span="2"
+            android:layout_column="0" />
 
     </TableRow>
 
@@ -68,10 +76,12 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Amount :"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Amount"
             android:id="@+id/textView3"
-            android:layout_below="@+id/account" />
+            android:layout_below="@+id/account"
+            android:layout_span="2"
+            android:layout_column="0" />
     </TableRow>
 
     <TableRow
@@ -87,22 +97,8 @@
             android:layout_below="@+id/textView2"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:text="$" />
-    </TableRow>
-
-    <TableRow
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:id="@+id/textView15"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_gravity="center_horizontal" />
+            android:layout_span="2"
+            android:layout_column="0" />
     </TableRow>
 
     <TableRow
@@ -120,18 +116,13 @@
             android:layout_alignLeft="@+id/textView3"
             android:layout_alignStart="@+id/textView3" />
 
-    </TableRow>
-
-    <TableRow
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
-
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Cancel"
             android:id="@+id/button7"
-            android:layout_column="0" />
+            android:layout_column="1" />
+
     </TableRow>
 
 </TableLayout>
