--- a/app/src/main/res/layout/activity_deposit.xml
+++ b/app/src/main/res/layout/activity_deposit.xml
@@ -106,22 +106,25 @@
         android:layout_height="fill_parent">
 
         <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Cancel"
+            android:id="@+id/cancelBttn"
+            android:layout_column="0"
+            android:layout_weight="1" />
+
+        <Button
             style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Deposit"
             android:id="@+id/Depositbttn"
             android:onClick=""
             android:layout_below="@+id/amount"
             android:layout_alignLeft="@+id/textView3"
-            android:layout_alignStart="@+id/textView3" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Cancel"
-            android:id="@+id/button7"
-            android:layout_column="1" />
+            android:layout_alignStart="@+id/textView3"
+            android:layout_column="1"
+            android:layout_weight="1" />
 
     </TableRow>
 
