--- a/app/src/main/res/layout/activity_transfer.xml
+++ b/app/src/main/res/layout/activity_transfer.xml
@@ -110,19 +110,21 @@
         android:layout_height="fill_parent">
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Cancel"
             android:id="@+id/button2"
             android:onClick=""
-            android:layout_column="0" />
+            android:layout_column="0"
+            android:layout_weight="1" />
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Transfer"
             android:id="@+id/trans"
-            android:layout_column="1" />
+            android:layout_column="1"
+            android:layout_weight="1" />
     </TableRow>
 
 </TableLayout>
