--- a/app/src/main/res/layout/activity_withdrawal.xml
+++ b/app/src/main/res/layout/activity_withdrawal.xml
@@ -86,7 +86,7 @@
 
         <Button
             style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Cancel"
             android:id="@+id/button"
@@ -94,17 +94,19 @@
             android:layout_below="@+id/amount"
             android:layout_alignLeft="@+id/textView3"
             android:layout_alignStart="@+id/textView3"
-            android:layout_column="0" />
+            android:layout_column="0"
+            android:layout_weight="1" />
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Withdraw"
             android:id="@+id/trans"
             android:layout_below="@+id/button"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_column="1" />
+            android:layout_column="1"
+            android:layout_weight="1" />
     </TableRow>
 
     <TableRow
